--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
     ]
   },
   "window":{
-    "backgroundTextStyle":"light",
+    "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#edeff0",
     "navigationBarTextStyle":"black",
     "backgroundColor": "#f8f8f8"
