feat: 攻略详情列表

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -23,6 +23,12 @@
           "pathName": "pages/mine/index",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "攻略",
+          "pathName": "pages/index/subpages/strategy/index",
+          "query": "",
+          "scene": null
         }
       ]
     }
