--- a/project.private.config.json
+++ b/project.private.config.json
@@ -47,6 +47,12 @@
           "pathName": "pages/mall/subpages/tour/index",
           "query": "",
           "scene": null
+        },
+        {
+          "name": "酒店",
+          "pathName": "pages/mall/subpages/hotel/index",
+          "query": "",
+          "scene": null
         }
       ]
     }
