--- a/app.json
+++ b/app.json
@@ -15,6 +15,7 @@
     "pages/mall/subpages/foot/index",
     "pages/mall/subpages/goods/index",
     "pages/mine/index",
+    "pages/common/register/index",
     "pages/common/user-center/index"
   ],
   "tabBar": {
