--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     "pages/mall/subpages/hotel/index",
     "pages/mall/subpages/foot/index",
     "pages/mall/subpages/goods/index",
+    "pages/mall/subpages/goods/subpages/goods-detail/index",
     "pages/mine/index",
     "pages/common/register/index",
     "pages/common/user-center/index",
