--- a/app.json
+++ b/app.json
@@ -1,9 +1,5 @@
 {
   "pages":[
-    "pages/common/register/index",
-    "pages/common/user-center/index",
-    "pages/common/webview/index",
-    "pages/common/pay/index",
     "pages/index/index",
     "pages/index/subpages/sign-in/index",
     "pages/index/subpages/search/index",
@@ -24,8 +20,12 @@
     "pages/mall/subpages/goods/subpages/search/index",
     "pages/mine/index",
     "pages/mine/suppages/address-list/index",
-    "pages/mine/suppages/address-list/subpages/add",
-    "pages/mine/suppages/address-list/subpages/edit"
+    "pages/mine/suppages/address-list/subpages/add/index",
+    "pages/mine/suppages/address-list/subpages/edit/index",
+    "pages/common/register/index",
+    "pages/common/user-center/index",
+    "pages/common/webview/index",
+    "pages/common/pay/index"
   ],
   "tabBar": {
     "color": "#979797",
