--- a/app.json
+++ b/app.json
@@ -23,6 +23,10 @@
     "pages/mine/suppages/address-list/index",
     "pages/mine/suppages/address-list/subpages/add/index",
     "pages/mine/suppages/address-list/subpages/edit/index",
+    "pages/mine/suppages/order-list/index",
+    "pages/mine/suppages/order-list/subpages/detail/index",
+    "pages/mine/suppages/order-list/subpages/comment/index",
+    "pages/mine/suppages/order-list/subpages/shipping/index",
     "pages/common/register/index",
     "pages/common/user-center/index",
     "pages/common/webview/index",
