--- a/app.json
+++ b/app.json
@@ -60,7 +60,7 @@
   },
   "window":{
     "backgroundTextStyle":"dark",
-    "navigationBarBackgroundColor": "#edeff0",
+    "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTextStyle":"black",
     "backgroundColor": "#f5f6f8"
   },
