--- a/app.json
+++ b/app.json
@@ -27,6 +27,9 @@
     "pages/mine/suppages/order-list/subpages/order-detail/index",
     "pages/mine/suppages/order-list/subpages/comment/index",
     "pages/mine/suppages/order-list/subpages/shipping/index",
+    "pages/mine/suppages/shop-management/index",
+    "pages/mine/suppages/shop-management/subpages/order-detail/index",
+    "pages/mine/suppages/shop-management/subpages/shipping/index",
     "pages/common/register/index",
     "pages/common/user-center/index",
     "pages/common/webview/index",
