--- a/project.private.config.json
+++ b/project.private.config.json
@@ -89,6 +89,13 @@
           "query": "",
           "launchMode": "default",
           "scene": null
+        },
+        {
+          "name": "直播预告",
+          "pathName": "pages/mine/suppages/live-management/live-notice/index",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
