--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@vant/weapp": "^1.9.2",
     "dayjs": "^1.11.5",
     "mobx-miniprogram": "^4.13.2",
-    "mobx-miniprogram-bindings": "^2.1.5"
+    "mobx-miniprogram-bindings": "^2.1.5",
+    "tim-upload-plugin": "^1.1.0",
+    "tim-wx-sdk": "^2.26.2"
   }
 }
