--- a/app.json
+++ b/app.json
@@ -40,7 +40,8 @@
       "live/create-live/index",
       "live/live-notice/index",
       "live/live-push/vertical-screen/index",
-      "live/live-push/horizontal-screen/index"
+      "live/live-push/horizontal-screen/index",
+      "live/live-play/index"
     ]
   }],
   "tabBar": {
