--- a/app.json
+++ b/app.json
@@ -36,6 +36,7 @@
       "mine/shop-management/index",
       "mine/shop-management/subpages/order-detail/index",
       "mine/shop-management/subpages/shipping/index",
+      "mine/video-create/index",
       "live/create-live/index",
       "live/live-notice/index",
       "live/live-push/vertical-screen/index",
