feat: 创建短视频

--- a/app.json
+++ b/app.json
@@ -64,6 +64,17 @@
     "navigationBarTextStyle": "black",
     "backgroundColor": "#f5f6f8"
   },
+  "networkTimeout": {
+    "request": 20000
+  },
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于定位效果展示"
+    }
+  },
+  "requiredPrivateInfos": [
+    "getLocation"
+  ],
   "sitemapLocation": "sitemap.json",
   "lazyCodeLoading": "requiredComponents"
 }
