feat: 我的设置中心

--- a/app.json
+++ b/app.json
@@ -32,6 +32,7 @@
       "mall/goods/subpages/cart/index",
       "mall/goods/subpages/search/index",
       "mall/goods/subpages/order-check/index",
+      "mine/setting/index",
       "mine/address-list/index",
       "mine/address-list/subpages/add/index",
       "mine/address-list/subpages/edit/index",
