--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
       "home/media/video/index",
       "home/media/author-center/index",
       "mall/search/index",
-      "mall/ticket/index",
+      "mall/scenic-spot/index",
       "mall/hotel/index",
       "mall/foot/index",
       "mall/goods/index",
