--- a/app.json
+++ b/app.json
@@ -23,6 +23,7 @@
       "home/media/author-center/index",
       "mall/search/index",
       "mall/scenic-spot/index",
+      "mall/scenic-spot/subpages/spot-detail/index",
       "mall/hotel/index",
       "mall/foot/index",
       "mall/goods/index",
