--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
       "mall/search/index",
       "mall/scenic-spot/index",
       "mall/scenic-spot/subpages/spot-detail/index",
+      "mall/scenic-spot/subpages/order-check/index",
       "mall/hotel/index",
       "mall/foot/index",
       "mall/goods/index",
