feat: 景点详情页子页面

--- a/app.json
+++ b/app.json
@@ -24,6 +24,11 @@
       "mall/search/index",
       "mall/scenic-spot/index",
       "mall/scenic-spot/subpages/spot-detail/index",
+      "mall/scenic-spot/subpages/spot-detail/subpages/more-info/index",
+      "mall/scenic-spot/subpages/spot-detail/subpages/comment-list/index",
+      "mall/scenic-spot/subpages/spot-detail/subpages/qa-list/index",
+      "mall/scenic-spot/subpages/spot-detail/subpages/nearby-hotels/index",
+      "mall/scenic-spot/subpages/spot-detail/subpages/nearby-spots/index",
       "mall/scenic-spot/subpages/order-check/index",
       "mall/hotel/index",
       "mall/foot/index",
