--- a/app.json
+++ b/app.json
@@ -11,6 +11,7 @@
       "common/webview/index",
       "common/pay/index",
       "common/cropper/index",
+      "common/video-play/index",
       "home/sign-in/index",
       "home/search/index",
       "home/media/live/create-live/index",
