feat: 景点门票订单

--- a/app.json
+++ b/app.json
@@ -43,10 +43,13 @@
       "mine/address-list/index",
       "mine/address-list/subpages/add/index",
       "mine/address-list/subpages/edit/index",
-      "mine/order-list/index",
-      "mine/order-list/subpages/order-detail/index",
-      "mine/order-list/subpages/comment/index",
-      "mine/order-list/subpages/shipping/index",
+      "mine/order-center/index",
+      "mine/order-center/subpages/goods-order-list/index",
+      "mine/order-center/subpages/goods-order-list/subpages/order-detail/index",
+      "mine/order-center/subpages/goods-order-list/subpages/comment/index",
+      "mine/order-center/subpages/goods-order-list/subpages/shipping/index",
+      "mine/order-center/subpages/scenic-order-list/index",
+      "mine/order-center/subpages/scenic-order-list/subpages/order-detail/index",
       "mine/merchant-center/index",
       "mine/merchant-center/subpages/shop-management/index",
       "mine/merchant-center/subpages/shop-management/subpages/order-detail/index",
