--- a/app.json
+++ b/app.json
@@ -32,6 +32,13 @@
       "mall/scenic-spot/subpages/spot-detail/subpages/nearby-spots/index",
       "mall/scenic-spot/subpages/order-check/index",
       "mall/hotel/index",
+      "mall/hotel/subpages/hotel-detail/index",
+      "mall/hotel/subpages/hotel-detail/subpages/more-info/index",
+      "mall/hotel/subpages/hotel-detail/subpages/comment-list/index",
+      "mall/hotel/subpages/hotel-detail/subpages/qa-list/index",
+      "mall/hotel/subpages/hotel-detail/subpages/nearby-hotels/index",
+      "mall/hotel/subpages/hotel-detail/subpages/nearby-spots/index",
+      "mall/hotel/subpages/order-check/index",
       "mall/foot/index",
       "mall/goods/index",
       "mall/goods/subpages/goods-detail/index",
