feat: 餐馆服务商入驻

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -3,132 +3,8 @@
     "compileHotReLoad": true,
     "urlCheck": false
   },
-  "condition": {
-    "miniprogram": {
-      "list": [
-        {
-          "name": "商城",
-          "pathName": "pages/mall/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "我的",
-          "pathName": "pages/tab-bar-pages/mine/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "攻略",
-          "pathName": "pages/index/subpages/strategy/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "游记",
-          "pathName": "pages/index/subpages/note/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "景点门票",
-          "pathName": "pages/mall/subpages/scenic-spot/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "跟团游",
-          "pathName": "pages/mall/subpages/tour/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "酒店",
-          "pathName": "pages/mall/subpages/hotel/index",
-          "query": "",
-          "scene": null
-        },
-        {
-          "name": "注册",
-          "pathName": "pages/subpages/common/register/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "商品",
-          "pathName": "pages/mall/subpages/goods/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "支付",
-          "pathName": "pages/subpages/common/pay/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "商家入驻",
-          "pathName": "pages/subpages/common/webview/index",
-          "query": "url=https://h5.youboi.com/tiddler/webview/index.html#/merchant/settle_in",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "店铺管理",
-          "pathName": "pages/mine/suppages/shop-management/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "创建直播",
-          "pathName": "pages/mine/suppages/live-management/create-live/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "创建游记",
-          "pathName": "pages/subpages/mine/create-note/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "景点详情",
-          "pathName": "pages/subpages/mall/scenic-spot/subpages/spot-detail/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "景点简介",
-          "pathName": "pages/subpages/mall/scenic-spot/subpages/spot-detail/subpages/more-info/index",
-          "query": "id=",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "门票订单确认",
-          "pathName": "pages/subpages/mall/scenic-spot/subpages/order-check/index",
-          "query": "id=undefined",
-          "launchMode": "default",
-          "scene": null
-        },
-        {
-          "name": "景点",
-          "pathName": "pages/subpages/mall/scenic-spot/index",
-          "query": "",
-          "launchMode": "default",
-          "scene": null
-        }
-      ]
-    }
-  },
+  "condition": {},
   "projectname": "mp-fish",
   "description": "项目私有配置文件。此文件中的内容将覆盖 project.config.json 中的相同字段。项目的改动优先同步到此文件中。详见文档：https://developers.weixin.qq.com/miniprogram/dev/devtools/projectconfig.html",
-  "libVersion": "2.32.0"
+  "libVersion": "3.0.1"
 }
