--- a/app.json
+++ b/app.json
@@ -68,6 +68,8 @@
       "mine/merchant-center/subpages/shop-management/index",
       "mine/merchant-center/subpages/shop-management/subpages/order-detail/index",
       "mine/merchant-center/subpages/shop-management/subpages/shipping/index",
+      "mine/merchant-center/subpages/catering-management/index",
+      "mine/merchant-center/subpages/catering-management/subpages/order-detail/index",
       "mine/create-video/index",
       "mine/create-note/index"
     ]
