--- a/app.json
+++ b/app.json
@@ -40,7 +40,7 @@
       "mall/hotel/subpages/hotel-detail/subpages/nearby-hotels/index",
       "mall/hotel/subpages/hotel-detail/subpages/nearby-spots/index",
       "mall/hotel/subpages/order-check/index",
-      "mall/foot/index",
+      "mall/catering/index",
       "mall/goods/index",
       "mall/goods/subpages/goods-detail/index",
       "mall/goods/subpages/shop/index",
