--- a/app.json
+++ b/app.json
@@ -41,6 +41,7 @@
       "mall/hotel/subpages/hotel-detail/subpages/nearby-spots/index",
       "mall/hotel/subpages/order-check/index",
       "mall/catering/index",
+      "mall/catering/subpages/restaurant-detail/index",
       "mall/goods/index",
       "mall/goods/subpages/goods-detail/index",
       "mall/goods/subpages/shop/index",
