--- a/app.json
+++ b/app.json
@@ -43,6 +43,7 @@
       "mall/catering/index",
       "mall/catering/subpages/restaurant-detail/index",
       "mall/catering/subpages/restaurant-detail/subpages/more-image/index",
+      "mall/catering/subpages/restaurant-detail/subpages/more-info/index",
       "mall/goods/index",
       "mall/goods/subpages/goods-detail/index",
       "mall/goods/subpages/shop/index",
