--- a/app.json
+++ b/app.json
@@ -67,6 +67,9 @@
       "mine/order-center/subpages/hotel-order-list/index",
       "mine/order-center/subpages/hotel-order-list/subpages/order-detail/index",
       "mine/order-center/subpages/hotel-order-list/subpages/comment/index",
+      "mine/order-center/subpages/meal-ticket-order-list/index",
+      "mine/order-center/subpages/meal-ticket-order-list/subpages/order-detail/index",
+      "mine/order-center/subpages/meal-ticket-order-list/subpages/comment/index",
       "mine/merchant-center/index",
       "mine/merchant-center/subpages/scenic-management/index",
       "mine/merchant-center/subpages/hotel-management/index",
