--- a/app.json
+++ b/app.json
@@ -45,6 +45,7 @@
       "mall/catering/subpages/restaurant-detail/subpages/more-image/index",
       "mall/catering/subpages/restaurant-detail/subpages/more-info/index",
       "mall/catering/subpages/restaurant-detail/subpages/meal-ticket-detail/index",
+      "mall/catering/subpages/restaurant-detail/subpages/set-meal-detail/index",
       "mall/catering/subpages/meal-ticket-order-check/index",
       "mall/goods/index",
       "mall/goods/subpages/goods-detail/index",
