--- a/app.json
+++ b/app.json
@@ -47,6 +47,7 @@
       "mall/catering/subpages/restaurant-detail/subpages/meal-ticket-detail/index",
       "mall/catering/subpages/restaurant-detail/subpages/set-meal-detail/index",
       "mall/catering/subpages/meal-ticket-order-check/index",
+      "mall/catering/subpages/set-meal-order-check/index",
       "mall/goods/index",
       "mall/goods/subpages/goods-detail/index",
       "mall/goods/subpages/shop/index",
