feat: 餐饮套餐订单

--- a/app.json
+++ b/app.json
@@ -72,6 +72,9 @@
       "mine/order-center/subpages/meal-ticket-order-list/index",
       "mine/order-center/subpages/meal-ticket-order-list/subpages/order-detail/index",
       "mine/order-center/subpages/meal-ticket-order-list/subpages/comment/index",
+      "mine/order-center/subpages/set-meal-order-list/index",
+      "mine/order-center/subpages/set-meal-order-list/subpages/order-detail/index",
+      "mine/order-center/subpages/set-meal-order-list/subpages/comment/index",
       "mine/merchant-center/index",
       "mine/merchant-center/subpages/scenic-management/index",
       "mine/merchant-center/subpages/hotel-management/index",
