--- a/app.json
+++ b/app.json
@@ -86,7 +86,8 @@
       "mine/merchant-center/subpages/catering-management/subpages/meal-ticket-order-detail/index",
       "mine/merchant-center/subpages/catering-management/subpages/set-meal-order-detail/index",
       "mine/create-video/index",
-      "mine/create-note/index"
+      "mine/create-note/index",
+      "mine/fan-follow-list/index"
     ]
   }],
   "tabBar": {
