--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "common/pay/index",
       "common/cropper/index",
       "common/video-play/index",
+      "message-center/index",
       "home/search/index",
       "home/media/live/create-live/index",
       "home/media/live/live-notice/index",
