--- a/app.json
+++ b/app.json
@@ -38,6 +38,7 @@
       "mall/hotel/subpages/hotel-detail/subpages/more-info/index",
       "mall/hotel/subpages/hotel-detail/subpages/comment-list/index",
       "mall/hotel/subpages/hotel-detail/subpages/qa-list/index",
+      "mall/hotel/subpages/hotel-detail/subpages/qa-list/subpages/qa-detail/index",
       "mall/hotel/subpages/hotel-detail/subpages/nearby-hotels/index",
       "mall/hotel/subpages/hotel-detail/subpages/nearby-spots/index",
       "mall/hotel/subpages/order-check/index",
