--- a/app.json
+++ b/app.json
@@ -48,6 +48,7 @@
       "mall/catering/subpages/restaurant-detail/subpages/more-info/index",
       "mall/catering/subpages/restaurant-detail/subpages/meal-ticket-detail/index",
       "mall/catering/subpages/restaurant-detail/subpages/set-meal-detail/index",
+      "mall/catering/subpages/restaurant-detail/subpages/evaluation-list/index",
       "mall/catering/subpages/restaurant-detail/subpages/qa-list/index",
       "mall/catering/subpages/restaurant-detail/subpages/qa-list/subpages/qa-detail/index",
       "mall/catering/subpages/meal-ticket-order-check/index",
