feat: 媒体关联商品选择

--- a/app.json
+++ b/app.json
@@ -93,6 +93,7 @@
       "mine/merchant-center/subpages/catering-management/subpages/set-meal-order-detail/index",
       "mine/create-video/index",
       "mine/create-note/index",
+      "mine/relative-commodity/index",
       "mine/fan-follow-list/index"
     ]
   }],
