--- a/app.json
+++ b/app.json
@@ -11,9 +11,9 @@
       "common/webview/index",
       "common/pay/index",
       "common/cropper/index",
+      "common/search/index",
       "common/video-play/index",
       "message-center/index",
-      "home/search/index",
       "home/media/live/create-live/index",
       "home/media/live/live-notice/index",
       "home/media/live/live-push/vertical-screen/index",
