--- a/app.json
+++ b/app.json
@@ -99,7 +99,8 @@
       "mine/promoter-center/subpages/account/subpages/withdraw-result/index",
       "mine/promoter-center/subpages/account/subpages/withdraw-record/index",
       "mine/promoter-center/subpages/account/subpages/bind-bank/index",
-      "mine/promoter-center/subpages/customer/index"
+      "mine/promoter-center/subpages/customer/index",
+      "mine/balance/index"
     ]
   }],
   "tabBar": {
