--- a/app.json
+++ b/app.json
@@ -100,7 +100,8 @@
       "mine/promoter-center/subpages/account/subpages/withdraw-record/index",
       "mine/promoter-center/subpages/account/subpages/bind-bank/index",
       "mine/promoter-center/subpages/customer/index",
-      "mine/balance/index"
+      "mine/balance/index",
+      "mine/history/index"
     ]
   }],
   "tabBar": {
