--- a/app.json
+++ b/app.json
@@ -101,6 +101,7 @@
       "mine/promoter-center/subpages/account/subpages/bind-bank/index",
       "mine/promoter-center/subpages/customer/index",
       "mine/balance/index",
+      "mine/coupon-list/index",
       "mine/history/index"
     ]
   }],
