feat: 统一景点命名scenic-spot改为scenic

--- a/app.json
+++ b/app.json
@@ -23,15 +23,15 @@
       "home/media/note/index",
       "home/media/video/index",
       "home/media/author-center/index",
-      "mall/scenic-spot/index",
-      "mall/scenic-spot/subpages/spot-detail/index",
-      "mall/scenic-spot/subpages/spot-detail/subpages/more-info/index",
-      "mall/scenic-spot/subpages/spot-detail/subpages/evaluation-list/index",
-      "mall/scenic-spot/subpages/spot-detail/subpages/qa-list/index",
-      "mall/scenic-spot/subpages/spot-detail/subpages/qa-list/subpages/qa-detail/index",
-      "mall/scenic-spot/subpages/spot-detail/subpages/nearby-hotels/index",
-      "mall/scenic-spot/subpages/spot-detail/subpages/nearby-spots/index",
-      "mall/scenic-spot/subpages/order-check/index",
+      "mall/scenic/index",
+      "mall/scenic/subpages/spot-detail/index",
+      "mall/scenic/subpages/spot-detail/subpages/more-info/index",
+      "mall/scenic/subpages/spot-detail/subpages/evaluation-list/index",
+      "mall/scenic/subpages/spot-detail/subpages/qa-list/index",
+      "mall/scenic/subpages/spot-detail/subpages/qa-list/subpages/qa-detail/index",
+      "mall/scenic/subpages/spot-detail/subpages/nearby-hotels/index",
+      "mall/scenic/subpages/spot-detail/subpages/nearby-spots/index",
+      "mall/scenic/subpages/order-check/index",
       "mall/hotel/index",
       "mall/hotel/subpages/hotel-detail/index",
       "mall/hotel/subpages/hotel-detail/subpages/more-image/index",
