--- a/app.json
+++ b/app.json
@@ -59,6 +59,7 @@
       "mall/goods/subpages/shop/index",
       "mall/goods/subpages/cart/index",
       "mall/goods/subpages/order-check/index",
+      "gift/index",
       "mine/setting/index",
       "mine/setting/subpages/user-info-setting/index",
       "mine/address-list/index",
